--- a/dashboard.html
+++ b/dashboard.html
@@ -3,90 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Dashboard - Cyber Void Aura</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f0f2f5;
+        /* COLOR PALETTE */
+        :root {
+            --aqua: #00fff0;
+            --violet: #b300ff;
+            --pink: #ff5de0;
+            --dark-bg: #05050a;
         }
 
-        /* Navigation Drawer */
+        body {
+            margin: 0;
+            background: var(--dark-bg);
+            font-family: 'Poppins', sans-serif;
+            color: white;
+        }
+
+        /* Glow Animation */
+        @keyframes neonGlow {
+            0% { text-shadow: 0 0 6px var(--aqua); color: var(--aqua); }
+            33% { text-shadow: 0 0 6px var(--violet); color: var(--violet); }
+            66% { text-shadow: 0 0 6px var(--pink); color: var(--pink); }
+            100% { text-shadow: 0 0 6px var(--aqua); color: var(--aqua); }
+        }
+
+        /* Drawer */
         .drawer {
             height: 100%;
             width: 0;
             position: fixed;
-            top: 0;
             left: 0;
-            background-color: #111;
+            top: 0;
+            background: rgba(10, 10, 20, 0.85);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 0 20px var(--violet);
             overflow-x: hidden;
-            transition: 0.3s;
+            transition: 0.35s;
             padding-top: 60px;
         }
 
         .drawer a {
-            padding: 12px 20px;
+            padding: 14px 20px;
+            display: block;
             text-decoration: none;
             font-size: 18px;
-            color: #f1f1f1;
-            display: block;
+            font-weight: 600;
+            color: white;
             transition: 0.2s;
         }
 
         .drawer a:hover {
-            background: #575757;
+            background: rgba(255, 255, 255, 0.1);
+            letter-spacing: 1px;
         }
 
         .drawer .closebtn {
             position: absolute;
             top: 10px;
-            right: 15px;
-            font-size: 35px;
+            right: 20px;
+            font-size: 40px;
+            cursor: pointer;
         }
 
-        /* Main Content */
-        #main {
-            transition: margin-left 0.3s;
-            padding: 20px;
-        }
-
+        /* Menu Button */
         .menu-btn {
-            font-size: 25px;
+            font-size: 27px;
             cursor: pointer;
-            padding: 10px;
-            background: #111;
-            color: #fff;
-            width: fit-content;
-            border-radius: 6px;
-        }
-
-        .title {
-            margin-top: 20px;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .box {
-            margin-top: 20px;
-            padding: 15px;
-            background: #fff;
+            padding: 12px 18px;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(8px);
             border-radius: 8px;
-            box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
+            width: fit-content;
+            border: 1px solid rgba(255,255,255,0.1);
+            box-shadow: 0 0 10px #000;
+            margin: 20px;
         }
 
+        .menu-btn:hover {
+            box-shadow: 0 0 10px var(--aqua);
+        }
+
+        /* Title */
+        .title {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 32px;
+            text-align: center;
+            margin-top: 20px;
+            animation: neonGlow 4s infinite linear;
+        }
+
+        /* Box */
+        .box {
+            margin: 30px;
+            padding: 20px;
+            background: rgba(255,255,255,0.05);
+            border-radius: 12px;
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255,255,255,0.1);
+            box-shadow: 0 0 15px rgba(0,255,240,0.2);
+        }
+
+        /* Button */
         .btn {
-            padding: 10px 15px;
-            font-size: 16px;
-            background: #111;
-            color: white;
+            padding: 12px 18px;
+            font-size: 17px;
+            font-weight: 600;
+            background: linear-gradient(90deg, var(--aqua), var(--violet), var(--pink));
             border: none;
-            border-radius: 6px;
+            border-radius: 8px;
+            color: white;
             cursor: pointer;
+            width: fit-content;
             margin-top: 10px;
+            box-shadow: 0 0 12px var(--violet);
+            animation: pulse 2.2s infinite ease-in-out;
+        }
+
+        @keyframes pulse {
+            0% { box-shadow: 0 0 10px var(--aqua); }
+            50% { box-shadow: 0 0 20px var(--violet); }
+            100% { box-shadow: 0 0 10px var(--pink); }
         }
 
         .btn:hover {
-            background: #333;
+            transform: scale(1.05);
+        }
+
+        #main {
+            transition: margin-left 0.3s;
         }
     </style>
 </head>
@@ -94,22 +143,22 @@
 
     <!-- Drawer -->
     <div id="drawer" class="drawer">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeDrawer()">&times;</a>
+        <span class="closebtn" onclick="closeDrawer()">×</span>
         <a href="#">Dashboard</a>
         <a href="fitur.html">Fitur</a>
         <a href="#">Pengaturan</a>
-        <a href="#" style="color: #ff5252;">Logout</a>
+        <a href="#" style="color: #ff3c78;">Logout</a>
     </div>
 
-    <!-- Main Content -->
+    <!-- Main -->
     <div id="main">
         <span class="menu-btn" onclick="openDrawer()">☰ Menu</span>
-        
-        <div class="title">Selamat Datang di Dashboard</div>
+
+        <div class="title">CYBER VOID AURA DASHBOARD</div>
 
         <div class="box">
-            <p>Ini adalah halaman dashboard utama tanpa gambar, hanya text clean dan simple.</p>
-            <button class="btn" onclick="window.location.href='fitur.html'">Pergi ke Fitur</button>
+            <p>Selamat datang di dashboard futuristik dengan tema neon AI yang dibuat sesuai request kamu.</p>
+            <button class="btn" onclick="window.location.href='fitur.html'">Buka Fitur</button>
         </div>
     </div>
 
