--- a/dashboard.html
+++ b/dashboard.html
@@ -1,178 +1,199 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Cyber Void Aura</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cyber Dashboard</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <style>
-        /* COLOR PALETTE */
-        :root {
-            --aqua: #00fff0;
-            --violet: #b300ff;
-            --pink: #ff5de0;
-            --dark-bg: #05050a;
-        }
+<style>
+    :root {
+        --aqua: #00fff0;
+        --violet: #b300ff;
+        --pink: #ff5de0;
+        --bg-dark: #0a0f1f;
+    }
 
-        body {
-            margin: 0;
-            background: var(--dark-bg);
-            font-family: 'Poppins', sans-serif;
-            color: white;
-        }
+    body {
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
+        background: var(--bg-dark);
+        color: white;
+        overflow-x: hidden;
+    }
 
-        /* Glow Animation */
-        @keyframes neonGlow {
-            0% { text-shadow: 0 0 6px var(--aqua); color: var(--aqua); }
-            33% { text-shadow: 0 0 6px var(--violet); color: var(--violet); }
-            66% { text-shadow: 0 0 6px var(--pink); color: var(--pink); }
-            100% { text-shadow: 0 0 6px var(--aqua); color: var(--aqua); }
-        }
+    /* ANIMATED GRADIENT BG */
+    body::before {
+        content: "";
+        position: fixed;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        
+        background: radial-gradient(circle at 30% 30%, rgba(0,255,240,0.15), transparent 40%),
+                    radial-gradient(circle at 70% 70%, rgba(255,93,224,0.12), transparent 40%),
+                    radial-gradient(circle at 80% 20%, rgba(179,0,255,0.12), transparent 40%);
+        filter: blur(90px);
+        z-index: -1;
+        animation: bgmove 10s infinite alternate ease-in-out;
+    }
 
-        /* Drawer */
-        .drawer {
-            height: 100%;
-            width: 0;
-            position: fixed;
-            left: 0;
-            top: 0;
-            background: rgba(10, 10, 20, 0.85);
-            backdrop-filter: blur(10px);
-            box-shadow: 0 0 20px var(--violet);
-            overflow-x: hidden;
-            transition: 0.35s;
-            padding-top: 60px;
-        }
+    @keyframes bgmove {
+        0% { transform: translate(0px, 0px); }
+        100% { transform: translate(40px, -40px); }
+    }
 
-        .drawer a {
-            padding: 14px 20px;
-            display: block;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: 600;
-            color: white;
-            transition: 0.2s;
-        }
+    /* TOPBAR */
+    .topbar {
+        background: rgba(255,255,255,0.05);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        padding: 15px;
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        font-family: 'Orbitron', sans-serif;
+        letter-spacing: 1px;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
+        box-shadow: 0 0 25px rgba(0,255,240,0.3);
+    }
 
-        .drawer a:hover {
-            background: rgba(255, 255, 255, 0.1);
-            letter-spacing: 1px;
-        }
+    .menu-btn {
+        margin-right: 15px;
+        font-size: 26px;
+        cursor: pointer;
+        color: var(--aqua);
+        text-shadow: 0 0 8px var(--aqua);
+    }
 
-        .drawer .closebtn {
-            position: absolute;
-            top: 10px;
-            right: 20px;
-            font-size: 40px;
-            cursor: pointer;
-        }
+    /* NAVIGATION DRAWER */
+    .drawer {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: rgba(20,20,35,0.55);
+        backdrop-filter: blur(15px);
+        overflow-x: hidden;
+        transition: 0.3s;
+        padding-top: 70px;
+        border-right: 1px solid rgba(255,255,255,0.1);
+        box-shadow: 0 0 25px rgba(179,0,255,0.25);
+    }
 
-        /* Menu Button */
-        .menu-btn {
-            font-size: 27px;
-            cursor: pointer;
-            padding: 12px 18px;
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(8px);
-            border-radius: 8px;
-            width: fit-content;
-            border: 1px solid rgba(255,255,255,0.1);
-            box-shadow: 0 0 10px #000;
-            margin: 20px;
-        }
+    .drawer a {
+        padding: 14px 25px;
+        display: block;
+        font-size: 18px;
+        color: white;
+        text-decoration: none;
+        border-bottom: 1px solid rgba(255,255,255,0.07);
+        transition: 0.2s;
+    }
 
-        .menu-btn:hover {
-            box-shadow: 0 0 10px var(--aqua);
-        }
+    .drawer a:hover {
+        background: rgba(255,255,255,0.08);
+        color: var(--aqua);
+        text-shadow: 0 0 6px var(--aqua);
+    }
 
-        /* Title */
-        .title {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 32px;
-            text-align: center;
-            margin-top: 20px;
-            animation: neonGlow 4s infinite linear;
-        }
+    /* CONTENT */
+    .content {
+        padding: 25px;
+        animation: fade 0.6s ease;
+    }
 
-        /* Box */
-        .box {
-            margin: 30px;
-            padding: 20px;
-            background: rgba(255,255,255,0.05);
-            border-radius: 12px;
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255,255,255,0.1);
-            box-shadow: 0 0 15px rgba(0,255,240,0.2);
-        }
+    @keyframes fade {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
 
-        /* Button */
-        .btn {
-            padding: 12px 18px;
-            font-size: 17px;
-            font-weight: 600;
-            background: linear-gradient(90deg, var(--aqua), var(--violet), var(--pink));
-            border: none;
-            border-radius: 8px;
-            color: white;
-            cursor: pointer;
-            width: fit-content;
-            margin-top: 10px;
-            box-shadow: 0 0 12px var(--violet);
-            animation: pulse 2.2s infinite ease-in-out;
-        }
+    h2 {
+        font-family: 'Orbitron', sans-serif;
+        text-shadow: 0 0 10px var(--violet);
+        animation: glow 3s infinite alternate;
+    }
 
-        @keyframes pulse {
-            0% { box-shadow: 0 0 10px var(--aqua); }
-            50% { box-shadow: 0 0 20px var(--violet); }
-            100% { box-shadow: 0 0 10px var(--pink); }
-        }
+    @keyframes glow {
+        0% { text-shadow: 0 0 10px var(--aqua); }
+        50% { text-shadow: 0 0 12px var(--violet); }
+        100% { text-shadow: 0 0 10px var(--pink); }
+    }
 
-        .btn:hover {
-            transform: scale(1.05);
-        }
+    /* LOGOUT BUTTON - NEON GRADIENT */
+    .logout-btn {
+        margin-top: 30px;
+        padding: 14px;
+        width: 200px;
+        font-size: 16px;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        color: white;
+        font-family: 'Poppins';
+        background: linear-gradient(90deg, var(--aqua), var(--violet), var(--pink));
+        background-size: 300%;
+        animation: pulse 3s infinite;
+        box-shadow: 0 0 12px var(--violet);
+        transition: 0.3s;
+    }
 
-        #main {
-            transition: margin-left 0.3s;
-        }
-    </style>
+    @keyframes pulse {
+        0% { background-position: 0%; }
+        100% { background-position: 100%; }
+    }
+
+    .logout-btn:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 20px var(--pink);
+    }
+
+</style>
 </head>
 <body>
 
-    <!-- Drawer -->
-    <div id="drawer" class="drawer">
-        <span class="closebtn" onclick="closeDrawer()">×</span>
-        <a href="#">Dashboard</a>
-        <a href="fitur.html">Fitur</a>
-        <a href="#">Pengaturan</a>
-        <a href="#" style="color: #ff3c78;">Logout</a>
-    </div>
+<!-- TOPBAR -->
+<div class="topbar">
+    <span class="menu-btn" onclick="openDrawer()">☰</span>
+    CYBER DASHBOARD
+</div>
 
-    <!-- Main -->
-    <div id="main">
-        <span class="menu-btn" onclick="openDrawer()">☰ Menu</span>
+<!-- DRAWER -->
+<div id="drawer" class="drawer">
+    <a href="dashboard.html">Dashboard</a>
+    <a href="fitur.html">Fitur</a>
+    <a href="#" onclick="logout()">Logout</a>
+</div>
 
-        <div class="title">CYBER VOID AURA DASHBOARD</div>
+<!-- CONTENT -->
+<div class="content">
+    <h2>Welcome, Operative.</h2>
+    <p>Sistem Cyber Void Aura telah aktif. Pilih menu melalui panel kiri.</p>
 
-        <div class="box">
-            <p>Selamat datang di dashboard futuristik dengan tema neon AI yang dibuat sesuai request kamu.</p>
-            <button class="btn" onclick="window.location.href='fitur.html'">Buka Fitur</button>
-        </div>
-    </div>
+    <button class="logout-btn" onclick="logout()">Logout</button>
+</div>
 
-    <script>
-        function openDrawer() {
-            document.getElementById("drawer").style.width = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
+<script>
+function openDrawer() {
+    document.getElementById("drawer").style.width = "260px";
+}
 
-        function closeDrawer() {
-            document.getElementById("drawer").style.width = "0";
-            document.getElementById("main").style.marginLeft = "0";
-        }
-    </script>
+window.onclick = function(event) {
+    const drawer = document.getElementById("drawer");
+    if (event.target !== drawer && !drawer.contains(event.target) && event.target.className !== "menu-btn") {
+        drawer.style.width = "0";
+    }
+};
+
+function logout() {
+    localStorage.removeItem("loggedIn");
+    window.location.href = "login.html";
+}
+</script>
 
 </body>
 </html>
