--- a/dashboard.html
+++ b/dashboard.html
@@ -191,7 +191,7 @@ window.onclick = function(event) {
 
 function logout() {
     localStorage.removeItem("loggedIn");
-    window.location.href = "login.html";
+    window.location.href = "index.html";
 }
 </script>
 
